--- a/Data_retrival.Rmd
+++ b/Data_retrival.Rmd
@@ -261,10 +261,6 @@ print(Fecal.Totals.all.plot)
 fecalc.kw <- kruskal.test(fecal_total$FecalValue ~ fecal_total$County_Code)
 fecalc.kw #chi-squared statistics = 33768, p-valye < 2.2e-16
 
-# There are two functions to run the Dunn Test -post tests
-#dunn.test(fecal_total$FecalValue, fecal_total$County_Code, kw = T, 
- #          table = F, list = T, method = "holm", altp = T)   #From package dunn.test
-#dunnTest(fecal_total$FecalValue, fecal_total$County_Code)    
 ```
 
 ### Data for Individual Counties
@@ -359,6 +355,19 @@ print(Greene.coli.seasons)
 ```
 
 
+```{r stats for Greene County}
+Greene_fc.anova <- aov(data = Greene_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(all_fc.anova)
+#sig df= 99, F value = 5.411 p <0.001
+
+options(max.print=999999)
+Greene_fc.lm <- lm(data = Greene_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Greene_fc.lm)
+
+#sig difference 1971, 1973, 
+
+```
+
 ```{r, Pitt County}
 ##Pitt County
 #had one of the highest ranking fecal colimform data in all of N.C. some samples over 10,000 cfu/100ml
@@ -446,6 +455,63 @@ print(Pitt.coli.seasons)
 
 
 ```
+```{r}
+Pitt_fc.anova <- aov(data = Pitt_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Pitt_fc.anova)
+#sig df= 99, F value = 2.615 p <0.001
+
+options(max.print=999999)
+Pitt_fc.lm <- lm(data = Pitt_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Pitt_fc.lm)
+
+#sig difference  Multiple R-squared:  0.6862,	Adjusted R-squared:  0.4238 
+#F-statistic: 2.615 on 1534 and 1834 DF,  p-value: < 2.2e-16
+
+```
+
+```{r}
+Duplin_fc.anova <- aov(data = Duplin_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Pitt_fc.anova)
+#sig df= 99, F value = 2.615 p <0.001
+
+options(max.print=999999)
+Duplin_fc.lm <- lm(data = Duplin_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Pitt_fc.lm)
+```
+
+```{r}
+lenoir_fc.anova <- aov(data = Lenoir_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(lenoir_fc.anova)
+#sig df= 99, F value = 3.059 p <0.001
+
+options(max.print=999999)
+Lenoir_fc.lm <- lm(data = Lenoir_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Lenoir_fc.lm)
+#Multiple R-squared:  0.7389,	Adjusted R-squared:  0.4974 
+#F-statistic: 3.059 on 976 and 1055 DF,  p-value: < 2.2e-16
+```
+
+```{r}
+Sampson_fc.anova <- aov(data = Sampson_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Sampson_fc.anova)
+#sig df= 866, F value = 99.3 p <0.001
+options(max.print=999999)
+Sampson_fc.lm <- lm(data = Sampson_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Sampson_fc.lm)
+#Multiple R-squared:  0.9778,	Adjusted R-squared:  0.968 
+#F-statistic: 99.32 on 866 and 1953 DF,  p-value: < 2.2e-16
+
+```
+
+```{r}
+Wayne_fc.anova <- aov(data = Wayne_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Wayne_fc.anova)
+#sig df= 754, F value = 1.856 p <0.001
+options(max.print=999999)
+Wayne_fc.lm <- lm(data = Wayne_fecal, Fecal_Coliform_Value ~ as.factor(Date))
+summary(Wayne_fc.lm)
+```
+
 
 ```{r, Duplin County}
 ##Duplin County
@@ -796,48 +862,37 @@ print(Wayne.coli.seasons)
 
 ```{r, combination plots of Case Studies}
 
-CombinedPlotYears <-cowplot::plot_grid(Greene.coli.years+ theme(axis.text.y = element_blank(),
+CombinedPlotYears <-cowplot::plot_grid(Greene.coli.years+ theme(
                                     axis.title.y = element_blank(), axis.title.x = element_blank() ), 
-                   Pitt.coli.years + theme(axis.text.y = element_blank(),
+                   Pitt.coli.years + theme(
                                     axis.title.y = element_blank(), axis.title.x = element_blank() ), 
-                   Duplin.coli.years,
-                   Lenoir.coli.years + theme(axis.text.y = element_blank(),
+                   Duplin.coli.years+ theme(
+                                    axis.title.y = element_blank(), axis.title.x = element_blank() ),
+                   Lenoir.coli.years + theme(
                                     axis.title.y = element_blank(),axis.title.x = element_blank() ),
-                   Sampson.coli.years + theme(axis.text.y = element_blank(),
+                   Sampson.coli.years + theme(
                                     axis.title.y = element_blank()),
-                  Wayne.coli.years + theme(axis.text.y = element_blank(),
+                  Wayne.coli.years + theme(
                                     axis.title.y = element_blank()),
                    ncol=2,
-                   labels = "auto")
+                   align = "h")
 print(CombinedPlotYears)
 
-CombinedPlotSeasons <-cowplot::plot_grid(Greene.coli.seasons+ theme(axis.text.y = element_blank(),
+CombinedPlotSeasons <-cowplot::plot_grid(Greene.coli.seasons+ theme(
                                     axis.title.y = element_blank(), axis.title.x = element_blank() ), 
-                   Pitt.coli.seasons + theme(axis.text.y = element_blank(),
+                   Pitt.coli.seasons + theme(
                                     axis.title.y = element_blank(), axis.title.x = element_blank() ), 
-                   Duplin.coli.seasons+ theme(axis.title.y = element_text(vjust=4)),
-                   Lenoir.coli.seasons + theme(axis.text.y = element_blank(),
+                   Duplin.coli.seasons+ theme(axis.title.y = element_blank(), axis.title.x = element_blank()),
+                   Lenoir.coli.seasons + theme(
                                     axis.title.y = element_blank(),axis.title.x = element_blank() ),
-                   Sampson.coli.seasons + theme(axis.text.y = element_blank(),
+                   Sampson.coli.seasons + theme(
                                     axis.title.y = element_blank()),
-                  Wayne.coli.seasons + theme(axis.text.y = element_blank(),
+                  Wayne.coli.seasons + theme(
                                     axis.title.y = element_blank()),
-                   ncol=2,
-                   labels = "auto")
-
+                   ncol=2, align = "h")
+  #labs(y = expression("Fecal coliforms filtered to 0.7 " * mu *m *  " (cfu / 100 ml)")) 
 
 print(CombinedPlotSeasons)
-```
-
-
-```{r}
-#explore idea of violin plot
-
-violin.plot <- ggplot(Wayne_fecal, aes(x= Date, y= Fecal_Coliform_Value, fill = Date ))+
-  geom_violin(draw_quantiles = 0.50)+
-  ylim(0, 1000)
-print(violin.plot)
-  
 ```
 
 
@@ -846,9 +901,6 @@ print(violin.plot)
 ```
 
 
-## Including Plots
-
-You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
 
